--- a/src/styles/components/footer.module.css
+++ b/src/styles/components/footer.module.css
@@ -109,9 +109,26 @@
 .logo {
   display: flex;
   justify-content: center;
-  background-color: #fff;
   align-items: center;
+  /* padding: 10px; */
+  width: 100%;
+  max-width: 150px;
 }
+
+
+.logo img {
+  width: 100%;       /* Logo image takes full width of .logo container */
+  height: auto;      /* Maintain aspect ratio */
+  display: block;    /* Remove inline spacing */
+  object-fit: contain; /* Keep logo fully visible */
+}
+
+@media (max-width: 400px) {
+  .logo {
+    max-width: 100px;
+  }
+}
+
 
 /* Responsive */
 @media (max-width: 900px) {
@@ -123,5 +140,8 @@
 @media (max-width: 600px) {
   .container {
     grid-template-columns: 1fr;
+  }
+   .logo {
+    max-width: 120px;
   }
 }
